--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,8 @@
-# SQLite version 3.x
-#   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: mysql2
+  database: expensesDb
+  username: expensesuser
+  password: testpwd
   pool: 5
   timeout: 5000
 
@@ -10,13 +10,17 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: mysql2
+  database: 
+  username: expensesuser
+  password: testpwd
   pool: 5
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: mysql2
+  database: 
+  username: expensesuser
+  password: testpwd
   pool: 5
   timeout: 5000
